Fix menu z-index

--- a/resources/assets/sass/page/homepage.scss
+++ b/resources/assets/sass/page/homepage.scss
@@ -23,6 +23,7 @@ body {
   flex-direction: column;
   overflow: hidden;
   .menu {
+    z-index: 1;
     position: absolute;
     top: 0;
     left: 0;
